k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-api
spec:
  selector:
    app: nest-api
  ports:
    - port: 80
      targetPort: 3000
